[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avala-agents"
version = "0.1.0"
description = "Build custom annotation workflow agents for the Avala platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24,<1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "respx>=0.20", "mypy>=1", "ruff>=0.1"]

[project.urls]
Homepage = "https://docs.avala.ai/integrations/agent-framework"
Repository = "https://github.com/avala-ai/avala"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
